--- a/static/css/site.less
+++ b/static/css/site.less
@@ -24,12 +24,17 @@ a {
     float: left;
 }
 
-.list {
+ul {
     list-style: none;
     padding: 0px;
     font-size: larger;
+
+    li {
+        padding-bottom: 0.5em;
+    }
     
     .list-extra {
+        display: block;
         font-size: smaller;
         padding-left: 1em;
         color: #444;
