--- a/contents/site_base.j2
+++ b/contents/site_base.j2
@@ -3,6 +3,7 @@
 {% block extra_head %}
     <link rel="stylesheet/less" type="text/css" href="/css/site.less">
     <script type="text/javascript" src="/js/less-1.3.0.min.js"></script>
+    <link href="http://{{ config.domain }}/atom.xml" type="application/atom+xml" rel="alternate" title="www.ironfroggy.com ATOM feed" />
 {% endblock %}
 
 {% block header %}
