Only show pub dates on the index on hover

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -41,6 +41,18 @@ ul {
     }
 }
 
+article h4 {
+    visibility: hidden;
+}
+article:hover h4 {
+    color: #666;
+    visibility: visible;
+}
+
+h3 + h4 {
+    margin-top: -1em;
+}
+
 footer {
     color: #444;
     font-size: smaller;
