Added disqus comments.

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -17,6 +17,7 @@ a {
 .col-25 {
     width: 25%;
     float: left;
+    position: relative;
 }
 
 .col-50 {
@@ -51,6 +52,12 @@ article:hover h4 {
 
 h3 + h4 {
     margin-top: -1em;
+}
+
+#disqus_thread {
+    margin: 5em 0em;
+    position: relative;
+    bottom: 0px;
 }
 
 footer {
