Fix list styles for post and mid column lists.

--- a/contents/index.j2
+++ b/contents/index.j2
@@ -6,7 +6,7 @@
 
 {% block mid_column %}
     <h3>Other places online</h3>
-    <ul>
+    <ul class=list>
         <li><a href="http://twitter.com/ironfroggy">@ironfroggy</a>
             <em class=list-extra>Ramblings and tweets both technical and personal</em>
         <li><a href="http://github.com/ironfroggy">github.com/ironfroggy</a>
