Nifty transitions on the hidden dates on teases

--- a/contents/index.j2
+++ b/contents/index.j2
@@ -18,8 +18,8 @@
 
 {% block content %}
     {% for bundle in engine.get_bundles_by("publish_time", "desc", status="published") %}
-        <article>
-            <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title }}</a></h3>
+        <article class=tease>
+            <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
             <h4>{{ bundle.meta.publish_time }}</h4>
             {{ bundle.content|truncate(255)|safe }}
         </article>
