--- a/contents/index.j2
+++ b/contents/index.j2
@@ -20,7 +20,15 @@
     {% for bundle in engine.get_bundles_by("publish_time", "desc", status="published") %}
         <article class=tease>
             <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
-            <h4>{{ bundle.meta.publish_time }}</h4>
+            <h4>{{ bundle.meta.publish_time }}
+            {% if bundle.tags %}
+            <span class=tags>
+            {% for tag in bundle.tags %}
+                {{ tag }}{% if not loop.last %}, {% endif %}
+            {% endfor %}
+            </span>
+            {% endif %}
+            </h4>
             {{ bundle.content|truncate(255)|safe }}
         </article>
     {% endfor %}
