--- a/contents/tag.j2
+++ b/contents/tag.j2
@@ -5,9 +5,19 @@
 {% endblock %}
 
 {% block content %}
-    <ul>
-    {% for tagged_bundle in bundle.get_bundles_by("title", "desc", status="published") %}
-        <li><a href="{{ tagged_bundle.url() }}">{{ tagged_bundle.meta.title|title }}</a></li>
+    {% for bundle in bundle.get_bundles_by("title", "desc", status="published") %}
+        <article class=tease>
+            <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
+            <h4>{{ bundle.meta.publish_time }}
+            {% if bundle.tags %}
+            <span class=tags>
+            {% for tag in bundle.tags %}
+                {{ tag }}{% if not loop.last %}, {% endif %}
+            {% endfor %}
+            </span>
+            {% endif %}
+            </h4>
+            {{ bundle.content|truncate(255)|safe }}
+        </article>
     {% endfor %}
-    </ul>
 {% endblock %}
