Add foundation icons pack and use for the link-to headers.

--- a/contents/post.j2
+++ b/contents/post.j2
@@ -2,7 +2,7 @@
 
 {% block header_right %}
     {% if bundle.meta.link_to %}
-        <h1><a href="{{ bundle.meta.link_to }}">{{ bundle.meta.title  }} <span class=link-arrow>&#x21A6;</span></a></h1>
+        <h1><a href="{{ bundle.meta.link_to }}">{{ bundle.meta.title  }} <span class="glyph general">u</span></a></h1>
     {% else %}
         <h1>{{ bundle.meta.title  }}</h1>
     {% endif %}
