--- a/static/css/site.less
+++ b/static/css/site.less
@@ -11,7 +11,9 @@ body {
     background: @background;
     color: @color;
 
-    .glyph { font-size: inherit; }
+    .glyph {
+        font-size: inherit;
+    }
 }
 
 header {
@@ -26,6 +28,10 @@ header {
     box-shadow: 0px 10px 10px #888888;
     h1 {
         text-shadow: 0px 0px 3px @headerColor/2;
+
+        &.title-link .glyph {
+            padding-left: 1em;
+        }
     }
 }
 
