Adding details to the project page

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -43,6 +43,9 @@ header {
     }
     .mid-column {
         .col-25;
+        &>p {
+            margin: 0 1em;
+        }
     }
     .right-column {
         .col-50;
