--- a/templates/index.j2
+++ b/templates/index.j2
@@ -5,6 +5,14 @@
 {% endblock %}
 
 {% block mid_column %}
+    <h3>Who am I?</h3>
+    <ul class=list>
+        <li>Python, Django, and Javascript developer for <a href="http://caktusgroup.com/">Caktus Group</a>
+        <li>Vegan atheist libral feminist advocate for a better world
+        <li>Father and husband
+        <li>Writer and once-artist
+        <li>Transhumanist
+    </ul>
     <h3>Other places online</h3>
     <ul class=list>
         <li><a href="http://twitter.com/ironfroggy">@ironfroggy</a>
