Fix background gradient to look better on both FF and WebKit

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -2,7 +2,7 @@
 
 
 @background: #ffffe8;
-@backgroundFrom: #dcdcb8;
+@backgroundFrom: #ffffaa;
 @color: #333;
 @link: #aa6650;
 @headerBackground: #222;
