--- a/templates/projects.j2
+++ b/templates/projects.j2
@@ -6,17 +6,19 @@
 
 {% block mid_column %}
     <h3>Active Projects</h3>
-    <p>
-    These projects are things I'm actively working on. All of them, if I'm
-    not slacking, are published at Github and have documentation at Read
-    The Docs.
-    </p>
+    {{ bundle.content|safe }}
 {% endblock %}
 
 {% block content %}
     {% for bundle in engine.get_bundles_by("title", "desc", type="project") %}
         <article class=tease>
-            <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
+            {% if bundle.url() %}
+                <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
+            {% elif bundle.meta.link_to %}
+                <h3><a href="{{ bundle.meta.link_to }}">{{ bundle.meta.title|title }}</a></h3>
+            {% else %}
+                <h3>{{ bundle.meta.title|title }}</h3>
+            {% endif %}
             <h4>{{ bundle.meta.publish_time }}
             {% if bundle.tags %}
             <span class=tags>
