--- a/templates/site_base.j2
+++ b/templates/site_base.j2
@@ -2,7 +2,7 @@
 
 {% block extra_head %}
     <link rel="stylesheet" type="text/css" href="/css/pygments.css">
-    <link rel="stylesheet" type="text/css" href="/css/foundation-icons-general-enclosed.css">
+    <link rel="stylesheet" type="text/css" href="/css/foundation-icons-general.css">
     <link rel="stylesheet/less" type="text/css" href="/css/site.less">
     <script type="text/javascript" src="/js/less-1.3.0.min.js"></script>
     <link href="http://{{ config.domain }}/atom.xml" type="application/atom+xml" rel="alternate" title="www.ironfroggy.com ATOM feed" />
@@ -26,15 +26,19 @@
 {% block main %}
 
     <div class=left-column>
-        <h3>Posts</h3>
-        <ul class=list>
-        {% for bundle in engine.get_bundles_by("publish_time", "desc", 5, status="published") %}
-            <li>
-                <a href="{{ bundle.url() }}">{{ bundle.meta.title }}</a><br />
-                <em class=list-extra>{{ bundle.meta.publish_time }}</em>
-            </li>
-        {% endfor %}
-        </ul>
+        {% if bundle.key != "index" %}
+            <h3>Posts</h3>
+            <ul class=list>
+            {% for bundle in engine.get_bundles_by("publish_time", "desc", 5, status="published") %}
+                <li>
+                    <a href="{{ bundle.url() }}">{{ bundle.meta.title }}</a><br />
+                    <em class=list-extra>{{ bundle.meta.publish_time }}</em>
+                </li>
+            {% endfor %}
+            </ul>
+        {% endif %}
+
+        <h3><a href="{{ engine.get_bundle(title="Projects").url() }}">Projects <span class="glyph general">u</span></a></h3>
 
         <h3>Tags</h3>
         <ul class=list>
