--- a/templates/projects.j2
+++ b/templates/projects.j2
@@ -7,6 +7,13 @@
 {% block mid_column %}
     <h3>Active Projects</h3>
     {{ bundle.content|safe }}
+    <h3>Other places online</h3>
+    <ul class=list>
+        <li><a href="http://github.com/ironfroggy">github.com/ironfroggy</a>
+            <em class=list-extra>My open source projects are all here</em>
+        <li><a href="http://readthedocs.org/profiles/ironfroggy/">my readthedocs.org profile</a>
+            <em class=list-extra>Documentation for my projects, like a responsible developer</em>
+    </ul>
 {% endblock %}
 
 {% block content %}
