Added a link to about

--- a/templates/site_base.j2
+++ b/templates/site_base.j2
@@ -46,6 +46,8 @@
             <li><a href="{{ tag_bundle.url() }}"> {{ tag }}</a></li>
         {% endfor %}
         </ul>
+
+        <h3><a href="{{ engine.get_bundle(key="about").url() }}">About <span class="glyph general">u</span></a></h3>
     </div>
 
     <div class=mid-column>
