--- a/templates/post.j2
+++ b/templates/post.j2
@@ -12,6 +12,14 @@
 {% block content %}
     <article>
         {{ bundle.content|safe }}
+        {% for attribution in bundle.meta.attribution %}
+            {% if loop.first %}- {% endif %}
+            {% if attribution.url %}
+                <a href="{{ attribution.url }}">{{ attribution.name }}</a>{% if not loop.last %}, {% endif %}
+            {% else %} 
+                {{ attribution }}{% if not loop.last %}, {% endif %}
+            {% endif %}
+        {% endfor %}
     </article>
 
     {% if config.disqus.enabled_default and not bundle.meta.disqus_disable %}
