--- a/templates/index.j2
+++ b/templates/index.j2
@@ -25,19 +25,24 @@
 {% endblock %}
 
 {% block content %}
-    {% for bundle in engine.get_bundles_by("publish_time", "desc", status="published") %}
+    {% for bundle in engine.get_bundles_by("updated_time", "desc", status="published") %}
         <article class=tease>
             <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
-            <h4>{{ bundle.meta.publish_time }}
-            {% if bundle.tags %}
-            <span class=tags>
-            {% for tag in bundle.tags %}
-                {{ tag }}{% if not loop.last %}, {% endif %}
-            {% endfor %}
-            </span>
-            {% endif %}
+            <h4 class=peak>{{ bundle.meta.updated_time }}
+                {% if bundle.tags %}
+                <span class=tags>
+                {% for tag in bundle.tags %}
+                    {{ tag }}{% if not loop.last %}, {% endif %}
+                {% endfor %}
+                </span>
+                {% endif %}
             </h4>
-            {{ bundle.content|truncate(255)|safe }}
+            {% if loop.first %}
+                {{ bundle.content|truncate(500)|safe }}
+            {% else %}
+                {{ bundle.content|truncate(255)|safe }}
+            {% endif %}
+            <a class="peak read-more" href="{{ bundle.url() }}">more</a>
         </article>
     {% endfor %}
 {% endblock %}
