--- a/templates/site_base.j2
+++ b/templates/site_base.j2
@@ -4,6 +4,7 @@
     <link rel="stylesheet" type="text/css" href="/css/pygments.css">
     <link rel="stylesheet" type="text/css" href="/css/foundation-icons-general.css">
     <link rel="stylesheet/less" type="text/css" href="/css/site.less">
+    <link rel="shortcut icon" href="/favicon.ico" />
     <script type="text/javascript" src="/js/less-1.3.0.min.js"></script>
     <link href="http://{{ config.domain }}/atom.xml" type="application/atom+xml" rel="alternate" title="www.ironfroggy.com ATOM feed" />
 {% endblock %}
