--- a/templates/index.j2
+++ b/templates/index.j2
@@ -5,14 +5,6 @@
 {% endblock %}
 
 {% block mid_column %}
-    <h3>Who am I?</h3>
-    <ul class=list>
-        <li>Python, Django, and Javascript developer for <a href="http://caktusgroup.com/">Caktus Group</a>
-        <li>Vegan atheist libral feminist advocate for a better world
-        <li>Father and husband
-        <li>Writer and once-artist
-        <li>Transhumanist
-    </ul>
     <h3>Other places online</h3>
     <ul class=list>
         <li><a href="http://twitter.com/ironfroggy">@ironfroggy</a>
@@ -21,6 +13,16 @@
             <em class=list-extra>My open source projects are all here</em>
         <li><a href="http://techblog.ironfroggy.com/">My tech blog</a>
             <em class=list-extra>This may merge in the future</em>
+        <li><a href="http://ironfroggy-reads.tumblr.com/">Ironfroggy Reads Things</a>
+            <em class=list-extra>Things I read, respond to, and/or find interesting online</em>
+    </ul>
+    <h3><a href="/i-am">Who am I?</a></h3>
+    <ul class=list>
+        <li>Python, Django, and Javascript developer for <a href="http://caktusgroup.com/">Caktus Group</a>
+        <li>Vegan atheist libral feminist advocate for a better world
+        <li>Father and husband
+        <li>Writer and once-artist
+        <li>Transhumanist
     </ul>
 {% endblock %}
 
