--- a/templates/index.j2
+++ b/templates/index.j2
@@ -31,18 +31,19 @@
         <article class=tease>
             <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
             <h4 class=peak>{{ bundle.meta.updated_time }}
-                {% if bundle.tags %}
+                {% set tags = bundle.meta['collections'].get('tags', {}) %}
+                {% if tags %}
                 <span class=tags>
-                {% for tag in bundle.tags %}
-                    {{ tag }}{% if not loop.last %}, {% endif %}
+                {% for tag in tags %}
+                    {{ tag.value }}{% if not loop.last %}, {% endif %}
                 {% endfor %}
                 </span>
                 {% endif %}
             </h4>
             {% if loop.first %}
-                {{ bundle.content|truncate(500)|safe }}
+                {{ bundle.content|truncate(500)|striptags }}
             {% else %}
-                {{ bundle.content|truncate(255)|safe }}
+                {{ bundle.content|truncate(255)|striptags }}
             {% endif %}
             <a class="peak read-more" href="{{ bundle.url() }}">more</a>
         </article>
