Remove striptags from teases, instead style the headers in them from content as normal text.

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -154,6 +154,15 @@ article.tease {
     .read-more {
         float: right;
     }
+    .tease-text h1,
+    .tease-text h2,
+    .tease-text h3,
+    .tease-text h4,
+    .tease-text h5,
+    .tease-text h6,
+    {
+        font: inherit;
+    }
 }
 
 h3 + h4 {
