Adding a github ribbon

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -64,10 +64,16 @@ header {
         &.title-link .glyph {
             padding-left: 1em;
         }
-    }
+    }    
 }
 
 #main {
+    position: relative;
+    #fork-me img {
+        height: 100px;
+        width: 100px;
+    }
+
     .pagePadding;
 
     .left-column {
