Added missing series template; Added rss icons to tags and series for a post, to suggest you can subscribe to them.

--- a/static/css/site.less
+++ b/static/css/site.less
@@ -185,3 +185,8 @@ h3 + h4 {
     padding: 0.25em 1.5em;
     margin: 0.5em 0;
 }
+
+li.feed {
+    list-style-image: url("/images/rss_icon_small.png");
+    margin-left: 30px;
+}
