--- a/templates/post.j2
+++ b/templates/post.j2
@@ -28,7 +28,7 @@
         <h4>Updated {{ bundle.meta.updated_time.strftime('%Y/%m/%d') }}</h4>
     {% endif %}
     {% for series in bundle.meta['collections'].get('series', {}) %}
-        <h3>Series: {{ series.value }}</h3>
+        <h3>Series: {{ series.value }} <img src="/images/rss_icon_small.png" /></h3>
         <ul class=list>
         {% for series_member in series.values()|sortbundles('title') %}
             <li><a href="{{ series_member.url() }}">{{ series_member.meta.title|title }}</a></li>
@@ -38,7 +38,7 @@
     <h3>Tags</h3>
     <ul class=list>
     {% for tag in bundle.meta['collections'].get('tags', {}) %}
-        <li><a href="{{ tag.url() }}">{{ tag.value }}</a></li>
+        <li class=feed><a href="{{ tag.url() }}">{{ tag.value }}</a></li>
     {% endfor %}
     </ul>
 {% endblock %}
