--- a/static/css/site.less
+++ b/static/css/site.less
@@ -65,6 +65,9 @@ header {
             padding-left: 1em;
         }
     }    
+
+    .header-site { .col-50; }
+    .header-page { .col-50; }
 }
 
 #main {
@@ -89,6 +92,18 @@ header {
 }
 
 @media (min-width: 401px) and (max-width: 800px) {
+    header {
+        .header-site {
+            .col-100;
+            font-size: 50%;
+        }
+        .header-page {
+            .col-100;
+        }
+        h3,h4,h5,h6 {
+            display: none;
+        }
+    }
     #main {
         .left-column {
             .col-50;
