--- a/static/css/site.less
+++ b/static/css/site.less
@@ -45,6 +45,10 @@ body {
     h1,h2,h3,h4,h5,h6 { a { color: @color; } }
     h1,h2,h3,h4,h5,h6 { a:visited { color: @color; } }
     h1,h2,h3,h4,h5,h6 { a:hover { color: lighten(@link, 20%); } }
+    h4 {
+        font-size: small;
+        margin: 0.5em auto;
+    }
 }
 
 header {
