Added nanowrimo post

--- a/templates/index.j2
+++ b/templates/index.j2
@@ -27,27 +27,9 @@
 {% endblock %}
 
 {% block content %}
+    {% set tease_length = 500 %}
     {% for bundle in engine.get_bundles_by("updated_time", "desc", status="published") %}
-        <article class=tease>
-            <h3><a href="{{ bundle.url() }}">{{ bundle.meta.title|title }}</a></h3>
-            <h4 class=peak>{{ bundle.meta.updated_time }}
-                {% set tags = bundle.meta['collections'].get('tags', {}) %}
-                {% if tags %}
-                <span class=tags>
-                {% for tag in tags %}
-                    {{ tag.value }}{% if not loop.last %}, {% endif %}
-                {% endfor %}
-                </span>
-                {% endif %}
-            </h4>
-            <div class=tease-text>
-                {% if loop.first %}
-                    {{ bundle.content|truncate(500) }}
-                {% else %}
-                    {{ bundle.content|truncate(255) }}
-                {% endif %}
-                <a class="peak read-more" href="{{ bundle.url() }}">more</a>
-            </div>
-        </article>
+        {{ article_tease(bundle, tease_length) }}
+        {% set tease_length = 255 %}
     {% endfor %}
 {% endblock %}
