--- a/templates/site_base.j2
+++ b/templates/site_base.j2
@@ -52,9 +52,8 @@
     </div>
 
     <div class=mid-column>
-        {% block mid_column %}
-            &nbsp;
-        {% endblock %}
+        {% block mid_column %}{% endblock %}
+        &nbsp;
     </div>
 
     <div class=left-column>
