--- a/templates/post.j2
+++ b/templates/post.j2
@@ -59,6 +59,7 @@
 {% endblock %}
 
 {% block content %}
+    {% block content_article %}
     <article>
         {{ bundle.content|safe }}
         {% for attribution in bundle.meta.attribution %}
@@ -70,6 +71,7 @@
             {% endif %}
         {% endfor %}
     </article>
+    {% endblock %}
 
     {% if config.disqus.enabled_default and not bundle.meta.disqus_disable %}
         <div id="disqus_thread"></div>
